--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-    "presets": ["@babel/preset-env"],
-    "plugins": [
+    "presets": [
+        [
+          "@babel/preset-env", { "useBuiltIns": "entry" }
+        ]
+      ],
+      "plugins": [
         ["@babel/transform-runtime"]
     ]
 }
