--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "esiur",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "description": "Distributed Object Framework",
   "main": "esiur.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "demo": "node ./demo/chat/chat.js",
     "babel": "./node_modules/.bin/babel src -d build",
     "build": "browserify src/esiur.js -t babelify --outfile build/esiur.js"
   },
