--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esiur",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "Distributed Object Framework",
   "main": "esiur.js",
   "type": "module",
@@ -21,14 +21,15 @@
   "homepage": "https://github.com/esiur/esiur-js#readme",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@babel/runtime": "^7.12.5",
+    "@babel/runtime": "^7.13.10",
+    "mongodb": "^3.6.6",
     "ws": "^6.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
     "babel-cli": "^6.0.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.2"
