--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esiur",
-  "version": "1.7.1",
+  "version": "1.7.2",
   "description": "Distributed Object Framework",
   "main": "esiur.js",
   "type": "module",
@@ -27,6 +27,7 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "babelify": "^10.0.0",
-    "browserify": "^17.0.0"
+    "browserify": "^17.0.0",
+    "eslint": "^7.31.0"
   }
 }
