--- a/.babelrc
+++ b/.babelrc
@@ -3,8 +3,11 @@
         [
           "@babel/preset-env"
         ]
-      ]
-      //"plugins": [
-        //["@babel/plugin-proposal-class-properties", { "loose": true }]  
-    //]
+      ],
+
+    "plugins": [
+      ["@babel/plugin-transform-runtime", {
+        "regenerator": true
+      }]
+    ] 
 }
